# WePo

backend/: package-lock.json  pyproject.toml
backend/app/: init.py  main.py  schemas.py
backend/app/analyzers/: po_lint.py
backend/app/providers/: ollama.py  openai_compat.py
backend/app/utils/: audit.py  debug_buffer.py  logging_config.py  placeholders.py  plurals.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AnalyzePanel.tsx  SettingsPanel.tsx  TranslatePanel.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  Label.tsx  Select.tsx  Textarea.tsx
frontend/src/lib/: locales.ts
