[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wp-po-ai-translator"
version = "0.3.0"
description = "WordPress Plugin PO File AI Translator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.8",
  "httpx>=0.27",
  "polib>=1.2.0",
  "python-dotenv>=1.0",
]

[tool.uvicorn]
factory = false
port = 8000
